# handlers/transaction_handler.go
@@ -1,0 +1,44 @@
+package handlers
+
+import (
+	"encoding/json"
+	"kasir-api/models" // package name is 'models' inside this folder
+	"net/http"
+	"kasir-api/services"
+)
+
+type TransactionHandler struct {
+	service *services.TransactionService
+}
+
+func NewTransactionHandler(service *services.TransactionService) *TransactionHandler {
+	return &TransactionHandler{service: service}
+}
+
+// multiple item apa aja, quantity nya
+func (h *TransactionHandler) HandleCheckout(w http.ResponseWriter, r *http.Request) {
+	switch r.Method {
+	case http.MethodPost:
+		h.Checkout(w, r)
+	default:
+		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
+	}
+}
+
+func (h *TransactionHandler) Checkout(w http.ResponseWriter, r *http.Request) {
+	var req models.CheckoutRequest
+	err := json.NewDecoder(r.Body).Decode(&req)
+	if err != nil {
+		http.Error(w, "Invalid request body", http.StatusBadRequest)
+		return
+	}
+
+	transaction, err := h.service.Checkout(req.Items, false)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(transaction)
+}
